Fixed main nav wrapping to next line on mobile screens

--- a/css/master.css
+++ b/css/master.css
@@ -724,8 +724,8 @@ li {
     color: #ef541e; }
   @media screen and (max-width: 479px) {
     .nav-text {
-      margin-left: 2.25em;
-      /*36px*/ } }
+      margin-left: 1.5em;
+      /*24px*/ } }
 
 .outer-container, .main-content {
   max-width: 68em;
