--- a/css/modules/_navigation.scss
+++ b/css/modules/_navigation.scss
@@ -60,6 +60,6 @@ li {
 
   //Responsive small screen
   @include media(max-width 479px) {
-    margin-left: $base-font-size * 2.25; /*36px*/
+    margin-left: $base-font-size * 1.5; /*24px*/
   }
 }
